# Ensemble-Emulator

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  IMGUI_FRONTEND.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MULTITHREADING_ANALYSIS.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  THREADING_AND_PERFORMANCE.md  THREADING_SUMMARY.md  architecture_notes.md  build-ffi.sh  copy-ffi.sh  good.csv  rustfmt.toml  state.sav  trace-log.txt
.cargo/: config.toml
.github/workflows/: lint.yml  release.yml  test.yml  tests.yml  version-check.yml
cli/: Cargo.toml  README.md
cli/src/: lib.rs
cli/src/cli/: args.rs  config.rs  error.rs  execution.rs  headless.rs  memory_init.rs  mod.rs  output.rs  video.rs
core/: Cargo.toml  README.md
core/assets/: high-contrast.pal  invert.pal
core/src/: lib.rs  palettes.rs  trace.rs  util.rs
core/src/app/: frontends.rs  imgui_backend.rs  imgui_frontend.rs  mod.rs
core/src/cli/: args.rs  config.rs  debug_export.rs  error.rs  execution.rs  gpu_upscale.rs  headless.rs  memory_dumps.rs  memory_init.rs  mod.rs  output.rs  screenshot.rs  upscale.rs  video.rs
core/src/emulation/: board.rs  channel_emu.rs  cpu.rs  emu.rs  messages.rs  mod.rs  nes.rs  opcode.rs  palette_util.rs  ppu.rs  ppu_util.rs  savestate.rs  screen_renderer.rs  threaded.rs
core/src/emulation/mapper/: mmc1.rs  mod.rs  nametable_mapping.rs
core/src/emulation/mem/: apu_registers.rs  memory_map.rs  mirror_memory.rs  mod.rs  nametable_memory.rs  palette_ram.rs  ppu_registers.rs
core/src/emulation/peripherals/: mod.rs
core/src/emulation/rom/: mod.rs
core/src/emulation/rom/formats/: archaic_ines.rs  ines.rs  ines2.rs  ines_07.rs
core/src/frontend/: egui_frontend.rs  godot_frontend.rs  imgui_frontend.rs  imgui_sdl3_frontend.rs  messages.rs  mod.rs  palettes.rs  persistence.rs  sdl_frontend.rs  util.rs
core/src/frontend/egui/: config.rs  fps_counter.rs  input.rs  keybindings.rs  mod.rs  textures.rs  tiles.rs
core/src/frontend/egui/message_handlers/: async_handler.rs  emulator_handler.rs
core/src/frontend/egui/ui/: emulator_output.rs  keybindings_pane.rs  menu_bar.rs  mod.rs  nametable_pane.rs  options_pane.rs  options_panel.rs  palettes.rs  pattern_table.rs  pattern_table_pane.rs  savestate_dialogs.rs  scaling.rs  snapping.rs  status_bar.rs  views.rs  widgets.rs
core/src/tests/: mod.rs
core/src/tests/cpu/: brk_vector.rs  mem.rs  mod.rs  nmi.rs  reset.rs
core/src/tests/cpu/instr_misc/: mod.rs
core/src/tests/cpu/instr_test_v5/: abs_xy_07.rs  absolute_06.rs  basics_01.rs  branches_10.rs  brk_15.rs  immediate_03.rs  implied_02.rs  ind_x_08.rs  ind_y_09.rs  jmp_jsr_12.rs  mod.rs  rti_14.rs  rts_13.rs  special_16.rs  stack_11.rs  zero_page_04.rs  zp_xy_05.rs
core/src/tests/cpu/opcodes/: adc.rs  and.rs  asl.rs  bcc.rs  bcs.rs  beq.rs  bit.rs  bmi.rs  bne.rs  bpl.rs  brk.rs  bvc.rs  bvs.rs  clc.rs  cli.rs  clv.rs  cmp.rs  cpx.rs  cpy.rs  dec.rs  dex.rs  dey.rs  eor.rs  inc.rs  inx.rs  iny.rs  jmp.rs  jsr.rs  lda.rs  ldx.rs  ldy.rs  lsr.rs  nop.rs  ora.rs  pha.rs  php.rs  pla.rs  plp.rs  rol.rs  ror.rs  (+14 more)
core/src/tests/nes/: cpu_reset.rs  mod.rs  nestest.rs  oam_read.rs  oam_stress.rs  performance.rs  ppu_open_bus.rs
core/src/tests/nes/ppu_vbl_nmi/: even_odd_frames_09.rs  even_odd_timing_10.rs  mod.rs  nmi_control_04.rs  nmi_off_timing_08.rs  nmi_on_timing_07.rs  nmi_timing_05.rs  suppression_06.rs  vbl_basics_01.rs  vbl_clear_time_03.rs  vbl_set_time_02.rs
core/tests/: AccuracyCoin.nes
core/tests/nes-test-roms/: nestest_headless.nes
core/tests/nes-test-roms/spritecans-2011/tools/: 8name.py  mktables.py  pilbmp2nes.py
core/tests/nes-test-roms/vaus-test/: nes.ini
core/tests/nes-test-roms/volume_tests/: nes.ini
docs/: CLI_INTERFACE.md  THREADING_ANALYSIS.md  VIDEO_EXPORT_RESEARCH.md  WASM_DEPLOYMENT.md  WASM_STORAGE.md
docs/architecture/: indexeddb-storage.md
docs/examples/: advanced_config.toml  basic_config.toml  memory_dump_config.toml  savestate_workflow.toml  test_cycles.toml  test_frames.toml  test_memory_condition.toml  test_pipe_workflow.toml  test_ppu_dumps.toml  test_savestate_load.toml  test_savestate_save.toml
ffi/: Cargo.toml  build.rs
ffi/src/: build.rs  lib.rs
frontend/: Cargo.toml  README.md  index.html
frontend/src/: channel_emu.rs  emulator_wrapper.rs  lib.rs  messages.rs  threaded_emu.rs
frontend/src/frontend/: egui_frontend.rs  messages.rs  mod.rs  persistence.rs  storage.rs  util.rs
frontend/src/frontend/egui/: config.rs  fps_counter.rs  input.rs  keybindings.rs  textures.rs  tiles.rs
frontend/src/frontend/egui/message_handlers/: async_handler.rs  emulator_handler.rs  mod.rs
frontend/src/frontend/egui/ui/: emulator_output.rs  keybindings_pane.rs  menu_bar.rs  mod.rs  nametable_pane.rs  options_pane.rs  palettes.rs  pattern_table.rs  pattern_table_pane.rs  rom_header_pane.rs  save_browser.rs  savestate_dialogs.rs  sprite_viewer_pane.rs  status_bar.rs  widgets.rs
godot_frontend/: Emulator_fronted.csproj  Emulator_fronted.sln  icon.svg.import  main.tscn  project.godot
godot_frontend/scripts/: EmuHost.cs  EmuHost.cs.uid
pally/: .gitignore  GNUmakefile  README.md  main.py  pally.py  pyproject.toml  usage.txt
renderer/: Cargo.toml  README.md
renderer/src/: lib.rs  pixel_renderer.rs  pixel_renderer2.rs  renderer_kind.rs
src/: cpu.rs  lib.rs  main.rs  nes.rs  opcode.rs  ppu.rs  rom.rs  savestate.rs  trace.rs  util.rs
src/emulation/: cpu.rs  emu.rs  mod.rs  nes.rs  opcode.rs  ppu.rs  savestate.rs  util.rs
src/frontend/: ffi_wrapper.rs  godot_frontend.rs  mod.rs
src/mem/: memory_map.rs  mirror_memory.rs  mod.rs  ppu_registers.rs
src/rom/: mod.rs  rom.rs
src/tests/: and.rs  bit.rs  dec.rs  dex.rs  dey.rs  eor.rs  inc.rs  inx.rs  iny.rs  lda.rs  ldx.rs  ldy.rs  mod.rs  pha.rs  php.rs  pla.rs  plp.rs  sta.rs  stx.rs  sty.rs  tax.rs  tay.rs  tsx.rs  txa.rs  txs.rs  tya.rs
wiki-clone/pages/: # ca65 Assembly Users Guide.txt  16_bit_BCD.md  1992_Contra_120_in_1.md  1992______1050_in_1.md  1993_Super_50_in_1_Game.md  2A03.md  4015.md  4017.md  4021.md  4_in_1_multicart.md  6264.md  7400.md  (+2643 more)
(+158 files in other folders)
