[workspace]
members = ["core", "frontend", "cli"]
default-members = ["core", "frontend"]
resolver = "3"

[profile.release]
strip = true
panic = "abort"
incremental = true

[profile.full_release]
inherits = "release"
lto = true
codegen-units = 1

[profile.profiling]
inherits = "release"
strip = "none"
debug = "full"
split-debuginfo = "unpacked"  # Ensures symbols are separate
