cargo-features = ["profile-rustflags"]

[workspace]
members = ["core", "frontend", "cli", "renderer"]
default-members = ["frontend"]
resolver = "3"

[profile.release]
strip = true
panic = "abort"
incremental = true

[profile.full_release]
inherits = "release"
lto = true
codegen-units = 1

[profile.max_performance]
inherits = "full_release"
rustflags = ["-C", "target-cpu=native"]

[profile.profiling]
inherits = "release"
strip = "none"
debug = "full"
split-debuginfo = "unpacked"  # Ensures symbols are separate
