[package]
name = "monsoon-cli"
version = "0.1.0"
edition = "2024"

[lib]
name = "monsoon_cli"
path = "src/lib.rs"

[[bin]]
name = "cli"
path = "src/bin/main.rs"

[dependencies]
serde = {version = "1.0.228", features = ["derive", "alloc", "rc"]}
serde_json = { version = "1.0.149" }
postcard = {version = "1.1.3", features = ["use-std"]}
clap = { version = "4.5.54", features = ["derive", "cargo", "env", "string", "unicode", "wrap_help"] }
toml = {version = "1.0.2", features = ["fast_hash"]}
image = {version = "0.25.9"}

monsoon-core = { path = "../core" }
monsoon-default-renderers = { path = "../renderer" }

