[package]
name = "monsoon-cli"
description = "Headless command-line interface for the Monsoon NES emulator"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "monsoon_cli"
path = "src/lib.rs"

[[bin]]
name = "cli"
path = "src/bin/main.rs"

[dependencies]
serde = {version = "1.0.228", features = ["derive", "alloc", "rc"]}
serde_json = { version = "1.0.149" }
postcard = {version = "1.1.3", features = ["use-std"]}
clap = { version = "4.5.54", features = ["derive", "cargo", "env", "string", "unicode", "wrap_help"] }
toml = {version = "1.0.2", features = ["fast_hash"]}
image = {version = "0.25.9"}

monsoon-core = { workspace = true }
monsoon-default-renderers = { workspace = true }
