[package]
name = "ensemble-lockstep"
version = "0.1.0"
edition = "2024"

[lib]
name = "ensemble_lockstep"
path = "src/lib.rs"

[dependencies]
serde = {version = "1.0.228", features = ["derive", "alloc", "rc"]}
serde_json = { version = "1.0.149" }
postcard = { version = "1.1.3", features = ["use-std"] }
sha2 = {version = "0.11.0-rc.5"}
inventory = {version = "0.3.21"}