[package]
name = "monsoon-core"
description = "Core NES emulation library — cycle-accurate MOS 6502 CPU, 2C02 PPU, memory subsystem, ROM parsing, and save states"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
exclude = [
    "tests/**",
    "src/tests/**"
]

[lib]
name = "monsoon_core"
path = "src/lib.rs"

[dependencies]
serde = {version = "1.0", features = ["derive", "alloc", "rc"]}
serde_json = { version = "1.0" }
postcard = { version = "1.1", features = ["use-std"] }
sha2 = {version = "0.11.0"}
num_enum = {version = "0.7.6"}
