[package]
name = "monsoon-frontend"
description = "Native GUI frontend for the Monsoon NES emulator, built with egui"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "monsoon_frontend"
path = "src/lib.rs"

[[bin]]
name = "frontend"
path = "src/bin/main.rs"

[dependencies]
eframe = { version = "0.34", features = ["wgpu", "persistence"] }
egui = { version = "0.34", features = ["persistence", "rayon"] }
egui_tiles = { version = "0.15", features = ["serde"] }
clap = { version = "4.6", features = ["derive", "cargo", "env", "string", "unicode", "wrap_help"] }
crossbeam-channel = { version = "0.5" }
rfd = { version = "0.17" }
directories = { version = "6.0" }
web-time = { version = "1.1" }
chrono = { version = "0.4", features = ["now"] }
sha2 = { version = "0.11.0" }
serde = { version = "1.0", features = ["derive", "alloc", "rc"] }
toml = { version = "1.1", features = ["fast_hash"] }
async-trait = { version = "0.1" }
strum = {version = "0.28.0", features = ["derive"]}

monsoon-core = { workspace = true }
monsoon-default-renderers = { workspace = true, optional = true }

[features]
default = ["default_renderers"]
default_renderers = ["monsoon-default-renderers"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.51", features = ["rt-multi-thread", "macros"] }

# Web-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { version = "0.4", features = ["wasmbind"] }
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
rexie = { version = "0.6" }
js-sys = "0.3"
